layout alignment fixed

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 } */
 
 .input {
-  font-size: 16px;
-  font-size: max(16px, 1em);
+  /* font-size: 2rem; */
+  font-size: max(16px, 0.5rem);
   font-family: inherit;
   /* padding: 0.55em 0.55em; */
   /* margin: 0.55em 0.55em; */
@@ -56,7 +56,10 @@
   /* input[type="text"]{font: 15px/24px 'Muli', sans-serif; color: #333; width: 100%; box-sizing: border-box; letter-spacing: 1px;
     display: flex;
     } */
-
+    .outfit{
+        max-width: 50%;
+        margin: auto;
+    }
     .grid-container {
         display: grid;
         grid-template-columns: repeat(9, 1fr);
@@ -64,14 +67,14 @@
         grid-column-gap: 0px;
         grid-row-gap: 0px;
         background-color: #2196F3;
-        padding: 5%;
+        padding: 1%;
         /* max-width: 80%; */
       }
       .grid-item {
         background-color: rgba(255, 255, 255, 0.8);
         border: 1px solid rgba(0, 0, 0, 0.8);
-        padding: 10%;
-        font-size: 3 rem;
+        padding: 1px 1px;
+        font-size: 2 rem;
         text-align: center;
       }
       .grid-item.br-right{
